[gd_scene load_steps=2 format=2]

[ext_resource path="res://views/base_view.gd" type="Script" id=1]

[node name="BaseView" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopButtonScroll" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="TopButtons" type="HBoxContainer" parent="VBoxContainer/TopButtonScroll"]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 920.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 913.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 906.0
margin_bottom = 557.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 571.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ButtonScroll"]
margin_right = 100.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
